--- a/index.html
+++ b/index.html
@@ -2,26 +2,36 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>اختبار محاكي</title>
+  <title>منصة الاختبارات التفاعلية</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>اختر نوع الاختبار</h1>
-  <div class="card-grid">
+  <header class="header">
+    <h1>🎓 منصة الاختبارات التفاعلية</h1>
+    <p>اختر نوع المحاكي الذي يناسبك وابدأ التدريب الآن</p>
+  </header>
+
+  <main class="card-grid">
     <div class="card" onclick="startQuickMock()">
       <div class="card-icon">⚡</div>
       <h2>محاكي سريع</h2>
-      <p>24 سؤال في 25 دقيقة لتجربة سريعة ومركزة</p>
+      <p>اختبار مكوّن من 24 سؤال في 25 دقيقة لتجربة سريعة ومركزة</p>
       <button>ابدأ الآن</button>
     </div>
+
     <div class="card" onclick="startRealMock()">
       <div class="card-icon">🎯</div>
       <h2>محاكي واقعي</h2>
-      <p>120 سؤال موزعة على 5 أقسام، كل قسم 24 سؤال في 25 دقيقة</p>
+      <p>اختبار كامل من 120 سؤال موزّع على 5 أقسام، كل قسم مدته 25 دقيقة</p>
       <button>ابدأ الآن</button>
     </div>
-  </div>
+  </main>
+
+  <footer class="footer">
+    <p>© 2025 جميع الحقوق محفوظة - تصميم يوسف</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
