--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <h1>🎓 منصة الاختبارات التفاعلية</h1>
-    <p>اختر نوع المحاكي الذي يناسبك وابدأ التدريب الآن</p>
+    <p>ابدأ التدريب باختيار نوع المحاكي المناسب لك</p>
   </header>
 
   <main class="card-grid">
