--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 جميع الحقوق محفوظة - تصميم يوسف</p>
+    <p>© 2025 جميع الحقوق محفوظة -  منصة جهاد</p>
   </footer>
 
   <script src="script.js"></script>
