--- a/quiz.html
+++ b/quiz.html
@@ -20,6 +20,7 @@
       <button onclick="nextQuestion()">➡️ التالي</button>
       <button onclick="reviewSection()">📋 مراجعة القسم</button>
     </div>
+    <button id="submit-section-btn" onclick="endSection()">✅ تسليم القسم</button>
     <button id="end-exam" onclick="finishExam()">🏁 إنهاء الامتحان</button>
   </div>
   <script src="quiz.js"></script>
