--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,9 @@
   <title>الاختبار</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
   <div class="quiz-container">
@@ -13,7 +16,7 @@
     <div id="timer">الوقت المتبقي: 25:00</div>
     
     <div id="paragraph-box" style="margin-bottom: 20px; font-size: 16px; line-height: 1.6; text-align: justify;">
-      </div>
+    </div>
     
     <div id="question-box">
       <p id="question-text">تحميل السؤال...</p>
