--- a/quiz.html
+++ b/quiz.html
@@ -27,7 +27,7 @@
     <div class="navigation">
       <button onclick="prevQuestion()">⬅️ السابق</button>
       <button onclick="nextQuestion()">➡️ التالي</button>
-      <button onclick="reviewSection()">📋 مراجعة القسم</button>
+<button onclick="saveAnswer(); reviewSection();">📋 مراجعة القسم</button>
     </div>
     
     <button id="submit-section-btn" onclick="endSection()">✅ تسليم القسم / 🏁 إنهاء الامتحان</button>
