--- a/quiz.html
+++ b/quiz.html
@@ -25,8 +25,8 @@
     </div>
     
     <div class="navigation">
-      <button onclick="prevQuestion()">⬅️ السابق</button>
-      <button onclick="nextQuestion()">➡️ التالي</button>
+      <button onclick="prevQuestion()">➡️ السابق</button>
+      <button onclick="nextQuestion()">⬅️ التالي</button>
 <button onclick="saveAnswer(); reviewSection();">📋 مراجعة القسم</button>
     </div>
     
